# EverPixel

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: filter_model.dart  main.dart  multiple_filter_page.dart  native_print.dart  single_filter_model.dart  single_filter_page.dart
lib/ffi/: math.c  native_print.cpp
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
open_cv/: CMakeLists.txt  my_functions.cpp  opencv_windows.cpp
plugins/c_plugin/: README.md  ffigen.yaml  pubspec.yaml
plugins/c_plugin/android/: build.gradle  settings.gradle
plugins/c_plugin/example/: README.md  pubspec.yaml
plugins/c_plugin/example/lib/: main.dart
plugins/c_plugin/example/linux/: CMakeLists.txt
plugins/c_plugin/ios/: c_plugin.podspec
plugins/c_plugin/ios/Classes/: c_plugin.c
plugins/c_plugin/lib/: c_plugin.dart  c_plugin_bindings_generated.dart
plugins/c_plugin/linux/: CMakeLists.txt
plugins/c_plugin/macos/: c_plugin.podspec
plugins/c_plugin/src/: CMakeLists.txt  c_plugin.c  c_plugin.h
plugins/c_plugin/windows/: CMakeLists.txt
server/: requirements.txt  server.py
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+16 files in other folders)
